AirquipUAT/force-app/main/default/objects/Purchase_Order_Line__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.faxa__QuickBooks_Customer_Id__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Purchase_Order_Line_Item_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>