AirquipUAT/force-app/main/default/objects/Purchase_Order_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Product_Service_PO_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>