AirquipUAT/force-app/main/default/objects/Purchase_Order_Line__c/fields/QuickBooks_Class__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuickBooks Class</label>
    <referenceTo>faxa__Class__c</referenceTo>
    <relationshipName>Purchase_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>