AirquipUAT/force-app/main/default/objects/Purchase_Order_Line__c/fields/QuickBooks_Class_Id__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Class_Id__c</fullName>
    <formula>QuickBooks_Class__r.faxa__Class_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuickBooks Class Id</label>
    <type>Text</type>
</CustomField>