AirquipUAT/force-app/main/default/objects/Purchase_Order_Line__c/fields/Quickbooks_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Customer_Id__c</fullName>
    <formula>Customer__r.faxa__QuickBooks_Customer_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quickbooks Customer Id</label>
    <type>Text</type>
</CustomField>