AirquipUAT/force-app/main/default/objects/Purchase_Order_Line__c/fields/QuickBooks_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Product_Id__c</fullName>
    <formula>Product__r.faxa__QuickBooks_Item_Id__c</formula>
    <label>QuickBooks Product Id</label>
    <type>Text</type>
</CustomField>